# MyWorkFolder

./: .gitignore
01-Homework/HelloWorld/: CMakeLists.txt
01-Homework/HelloWorld/src/: main.cpp
01-Homework/greeting/: CMakeLists.txt
01-Homework/greeting/src/: main.cpp
01-Homework/greeting_lib/include/: greeting.hpp
01-Homework/greeting_lib/src/: greeting.cpp
01-homework/greeting/: CMakeLists.txt
01-homework/greeting/include/: greeting.hpp
01-homework/greeting/src/: main.cpp
01-homework/greeting_lib/: CMakeLists.txt
01-homework/greeting_lib/include/: greeting.hpp
01-homework/greeting_lib/src/: greeting.cpp
01-homework/helloWorld/: CMakeLists.txt
02-homework/: CMakeLists.txt  README.md
02-homework/dynamic/: CMakeCache.txt  CMakeLists.txt
02-homework/dynamic/src/: main.cpp
02-homework/fun/: CMakeLists.txt
02-homework/fun/res/: template.xml
02-homework/fun/src/: main.cpp
02-homework/static/: CMakeLists.txt
02-homework/static-sub/: CMakeLists.txt
02-homework/static/src/: main.cpp
03-homework/sdl-engine/: CMakeLists.txt  engine.cpp  engine.hpp  keybind.cpp  keybind.hpp  main.cpp
03-homework/sdl-engine-ddl/: CMakeLists.txt  engine.cpp  engine.hpp  keybind.cpp  keybind.hpp  main.cpp
03-homework/sdl-engine/engine/: CMakeLists.txt  engine.cpp  engine.hpp  keybind.hpp
03-homework/sdl-engine/include/: engine.hpp  keybindfunctions.hpp
03-homework/sdl-engine/src/: main.cpp
03-homework/sdl-hot-reload/: CMakeLists.txt  engine.cpp  engine.cxx  engine.hpp  engine.hxx  game.cpp  game.cxx  main.cpp
03-homework/sdl-infinite-loop/: CMakeLists.txt
03-homework/sdl-infinite-loop/include/: keybind.hpp  keybindfunctions.hpp
03-homework/sdl-infinite-loop/src/: main.cpp  test.cpp
04-homework/: README.md
04-homework/00-blank-canvas/: 00-blank-canvas-main.cpp  00-blank-canvas.cpp  00-blank-canvas.hpp  CMakeLists.txt
04-homework/01-line-render/: 01-line-renderer-main.cpp  01-line-renderer.cpp  01-line-renderer.hpp  CMakeLists.txt
04-homework/02-triangle-render/: 00-blank-canvas.cpp  00-blank-canvas.hpp  01-line-renderer.cpp  02-triangle-render-main.cpp  02-triangle-render.cpp  02-triangle-render.hpp  CMakeLists.txt
04-homework/03-indexed-triangle-render/: 00-blank-canvas.hpp  01-line-renderer.hpp  02-triangle-render.cpp  02-triangle-render.hpp  03-indexed-triangle-render-main.cpp  03-indexed-triangle-render.cpp  03-indexed-triangle-render.hpp  CMakeLists.txt
04-homework/04-interpolated-triangle/: interpolation.cpp
04-homework/04-interpolated-triangle-my-interpolation/: CMakeLists.txt  interpolation.cpp
04-homework/05-renderer/: 00-blank-canvas.hpp  01-line-renderer.cpp  01-line-renderer.hpp  04-interpolated-triangle.cpp  04-interpolated-triangle.hpp  05-shader.cpp  CMakeLists.txt
04-homework/05-renderer-fixed/: 00-blank-canvas.cpp  00-blank-canvas.hpp  01-line-render.cpp  01-line-render.hpp  02-triangle-render.cpp  02-triangle-render.hpp  03-triangle-indexed-render.cpp  03-triangle-indexed-render.hpp  04-interpolated-triangle-render.cpp  04-interpolated-triangle-render.hpp  05-shader.cpp  CMakeLists.txt
04-homework/05-tiny-renderer/: geometry.cpp  geometry.hpp  main.cpp  model.cpp  model.hpp  our_gl.cpp  our_gl.hpp  tgaimage.cpp  tgaimage.hpp
04-homework/test/: CMakeLists.txt  test.cpp
05-homework/05-blank-canvas/: CMakeLists.txt  glcontext.cpp
05-homework/05-blank-canvas/glad/: glad.c  glad.h
05-homework/05-shader/: CMakeLists.txt  filemyshader.frag  filemyshader.vert  glcontext.cpp  glcontext.hpp  main.cpp
05-homework/05-shader/glad/: glad.h
05-homework/05-shader/shader/: filemyshader.frag  filemyshader.vert
06-textures/01-texture-engine/: CMakeLists.txt  game-object.cpp  game-object.hpp  game.cpp  game.hpp  main.cpp  resource-manager.cpp  resource-manager.hpp  shader.cpp  shader.hpp  sprite-renderer.cpp  sprite-renderer.hpp  sprite.frag  sprite.vs  texture.cpp  texture.hpp  user-interface.cpp  user-interface.hpp
06-textures/01-texture-engine/KHR/: khrplatform.h
06-textures/01-texture-engine/glad/: glad.c
06-textures/01-texture-engine/imgui_pack/: CMakeLists.txt
